<resources>
    <string name="app_name">HOTR</string>
    <string name="app_name_dev">HOTR Dev</string>
    <string name="beauty_title">医美</string>
    <string name="doctor_list_title">名医馆</string>
    <string name="hospital_list_title">明星机构</string>
    <string name="massage_list_title">按摩项目</string>
    <string name="masseur_list_title">挑技师</string>
    <string name="spa_list_title">按摩院</string>
    <string name="case_list_title">医美案例</string>
    <string name="massage_title">按摩</string>
    <string name="party_title">派对</string>
    <string name="shop_title">商城</string>
    <string name="product_title">商品</string>
    <string name="case_title">案例</string>
    <string name="doctor_title">医生主页</string>
    <string name="hospital_title">医院主页</string>
    <string name="discovery_title">发现</string>
    <string name="hospital1">医院</string>
    <string name="appointment_title">医生的预约</string>
    <string name="confirm_order_title">确认订单</string>
    <string name="pay_order_title">支付订单</string>
    <string name="unused_title">待使用</string>
    <string name="used_title">已使用</string>
    <string name="commented">已评价</string>
    <string name="un_comment">未评价</string>
    <string name="expired_title">已过期</string>
    <string name="refunding_title">退款中</string>
    <string name="refunded_title">已退款</string>
    <string name="receipt_title">核销券</string>
    <string name="content_title">内容</string>
    <string name="voucher_title">优惠券</string>
    <string name="notice_title">消息通知</string>
    <string name="home_title">主页</string>
    <string name="compare_title">对比照</string>
    <string name="post_title">帖子</string>
    <string name="interview_title">微访谈</string>
    <string name="news_title">新闻头条</string>
    <string name="fav_title">我的收藏</string>
    <string name="edit_title">修改个人资料</string>
    <string name="my_identity_audit">身份认证审核中</string>
    <string name="connect_spa_audit">机构关联中</string>
    <string name="personal_info_audit">个人资料审核中</string>
    <string name="upload_compare">发对比</string>
    <string name="upload_post">发帖子</string>
    <string name="product_bought">我购买过的产品</string>
    <string name="choose_doctor_title">选择医生</string>
    <string name="settings">设置</string>
    <string name="manage_deliver_address">管理收货地址</string>
    <string name="select_deliver_address">选择收货地址</string>
    <string name="popular_post_title">热帖</string>
    <string name="group_title">圈子</string>
    <string name="select_group">选择圈子</string>
    <string name="hospital">医美机构</string>
    <string name="product">医美产品</string>
    <string name="product1">医美项目</string>
    <string name="doctor">医生</string>
    <string name="spa">SPA机构</string>
    <string name="masseur1">按摩技师</string>
    <string name="massage">按摩产品</string>
    <string name="massage1">按摩项目</string>
    <string name="page_main">主页</string>
    <string name="page_found">发现</string>
    <string name="page_receipt">卡包</string>
    <string name="page_info">我的</string>
    <string name="locating">定位中...</string>
    <string name="guanzhu">关注TA</string>
    <string name="subject">相关项目</string>
    <string name="your_city">您的位置</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索记录</string>
    <string name="search_clear">清除</string>
    <string name="change_type">切换类别</string>
    <string name="popular_subject">热门项目</string>
    <string name="search_hint">请输入关键字</string>
    <string name="choose_type">请选择类别</string>
    <string name="you_may_interested">你可能感兴趣的</string>
    <string name="subject_introduction">项目介绍</string>
    <string name="know_more">了解更多</string>
    <string name="subject_param1">治疗方式：</string>
    <string name="subject_param2">价格区间：</string>
    <string name="subject_param3">回复周期：</string>
    <string name="subject_param4">治疗次数：</string>
    <string name="filter_city">全国城市</string>
    <string name="filter_subject">全部项目</string>
    <string name="filter_appointment">预约最多</string>
    <string name="filter_default">智能排序</string>
    <string name="filter_case">案例最多</string>
    <string name="filter_price_asc">价格由高到低</string>
    <string name="filter_price_desc">价格由低到高</string>
    <string name="filter_amount">销量最高</string>
    <string name="filter_distance">离我最近</string>
    <string name="number_consult">咨询量</string>
    <string name="number_case">案例数</string>
    <string name="number_appointment">预约数</string>
    <string name="total">共%1$d条</string>
    <string name="total2">%1$d条</string>
    <string name="num_of_appointment">%1$d 预约</string>
    <string name="appointment">预约</string>
    <string name="num_of_appointment1">预约数：%1$d</string>
    <string name="price">¥%1$s</string>
    <string name="num_of_case">%1$d 案例</string>
    <string name="specialize">擅长项目</string>
    <string name="specialize1">擅长项目：</string>
    <string name="specialize2">擅长 </string>
    <string name="doctor_info">医生资料</string>
    <string name="doctor_job">担任职务：</string>
    <string name="doctor_intro">医生简介：</string>
    <string name="doctor_album">医生相册：</string>
    <string name="hospital_info">机构介绍</string>
    <string name="deposit">预约金：</string>
    <string name="full_amount">全款：</string>
    <string name="pay_at_shop">到店再付：¥%1$s</string>
    <string name="pay_at_shop1">还需到店支付：</string>
    <string name="no_need_to_pay_at_shop">无需到店支付</string>
    <string name="voucher">优惠券</string>
    <string name="remaining_total2">（到店支付）</string>
    <string name="need_to_pay">需支付</string>
    <string name="product_number">商品数量</string>
    <string name="pay_method">选择支付方式</string>
    <string name="pay_zfb">支付宝支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="confirm_pay">确认支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_success1">您的核销码已经发放到卡卷包里了\n请在门店消费时出示使用</string>
    <string name="pay_success2">您的门票已经购买成功\n请到派对订单详情里查看</string>
    <string name="pay_id">订单编号：</string>
    <string name="pay_merchant">服务机构：</string>
    <string name="pay_product">商品名称：</string>
    <string name="pay_number">商品数量：</string>
    <string name="pay_number1">商品数量：x%1$d</string>
    <string name="order_id">订单号：%1$s</string>
    <string name="number">数量：%1$d</string>
    <string name="order_create_time">创建时间：%1$s</string>
    <string name="order_pay_time">付款时间：%1$s</string>
    <string name="wechat_pay_id">微信支付交易号：%1$s</string>
    <string name="alipay_pay_id">支付宝支付交易号：%1$s</string>
    <string name="pay_by_wechat">支付方式：微信支付</string>
    <string name="pay_by_alipay">支付方式：支付宝支付</string>
    <string name="total_amount">预约金合计：</string>
    <string name="go_to_voucher">前往卡包查看</string>
    <string name="go_to_coupon">查看核销券</string>
    <string name="continue_shopping">继续逛逛</string>
    <string name="money">¥</string>
    <string name="see_all">查看全部</string>
    <string name="online_query">在线咨询</string>
    <string name="buy_now">立即购买</string>
    <string name="see_part">收起</string>
    <string name="product_intro">图文详情</string>
    <string name="related_case">相关案例</string>
    <string name="hospital_highlight">医院特色</string>
    <string name="related_product">相关产品</string>
    <string name="photo_before_after">术前术后对比照</string>
    <string name="product_detail">产品详情</string>
    <string name="delete">删除</string>
    <string name="refund_amount">退款金额</string>
    <string name="refund_info">自申请之日起3到5个工作日\n退款将会退还至您的原支付账户</string>
    <string name="delete_receipt">确定要删除此核销卷吗？</string>
    <string name="hint_make_appointment">温馨提示：去门店消费是可以先进行预约哦~\n预约电话：%1$s</string>
    <string name="merchant_certified">已通过机构认证</string>
    <string name="reply">发表评论...</string>
    <string name="post_item">帖子</string>
    <string name="compare">对比照</string>
    <string name="my_order">我的订单</string>
    <string name="my_identity">身份认证</string>
    <string name="youzan_order">商城订单</string>
    <string name="announcement">通知</string>
    <string name="draft">草稿箱</string>
    <string name="favorite">收藏</string>
    <string name="invite_friend">邀请好友</string>
    <string name="total_price">金额合计：</string>
    <string name="total_price1">支付金额合计：</string>
    <string name="all">全部</string>
    <string name="product_price">商品价格：</string>
    <string name="not_paid">待付款</string>
    <string name="paid">已付款</string>
    <string name="pay_time">付款时间：</string>
    <string name="order_pay_success">付款成功</string>
    <string name="pay">去付款</string>
    <string name="order_wait_pay">等待付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_now">立即付款</string>
    <string name="delete_order">删除订单</string>
    <string name="buy_again">再次购买</string>
    <string name="order_detail">订单详情</string>
    <string name="no_order">还没有相关订单</string>
    <string name="no_voucher">还没有优惠券</string>
    <string name="no_address">还没有可用地址哦</string>
    <string name="no_fav">还没有收藏哦</string>
    <string name="no_notice">还没有消息通知</string>
    <string name="not_used">未使用（%1$d）</string>
    <string name="used">已使用（%1$d）</string>
    <string name="expired">已过期（%1$d）</string>
    <string name="reply1">回复</string>
    <string name="reply2">回复 %1$s：</string>
    <string name="follow_you">关注了您</string>
    <string name="notice_message">私信</string>
    <string name="notice_comment">评论</string>
    <string name="notice_like">赞</string>
    <string name="notice_friend">新粉丝</string>
    <string name="notice_notice">通知</string>
    <string name="my_follower">我的粉丝</string>
    <string name="my_fav">我关注的</string>
    <string-array name="gender">
        <item>男</item>
        <item>女</item>
        <item>保密</item>
    </string-array>
    <string name="age">年龄：</string>
    <string-array name="sex">
        <item>保密</item>
        <item>同性</item>
        <item>异性</item>
        <item>流动性向</item>
    </string-array>
    <string name="city">地区：</string>
    <string name="intro">简介：</string>
    <string name="order_dialog_option1">我不想买了</string>
    <string name="order_dialog_option2">商品选错了，重新买</string>
    <string name="order_dialog_option3">没时间做</string>
    <string name="order_dialog_option4">其他原因</string>
    <string name="draft_dialog_option1">继续发布</string>
    <string name="draft_dialog_option2">保存并退出</string>
    <string name="draft_dialog_option3">直接退出</string>
    <string name="more_fav">更多收藏</string>
    <string name="change_avatar">修改头像</string>
    <string name="nick_name">昵称：</string>
    <string name="age_number">%1$d岁</string>
    <string name="year_number">%1$d年</string>
    <string name="choose_product">请选择商品</string>
    <string name="choose_doctor">请选择医生</string>
    <string name="upload_photo">上传术前术后照片</string>
    <string name="upload_photo1">上传术前、术后正面照，赢取对比照奖金</string>
    <string name="compare_hint">关于变男神的话题，想和大家分享些什么呢？ （正文不能少于50字）</string>
    <string name="post_hint">想和大家分享些什么呢？ （正文不能少于20字）</string>
    <string name="min_50">内容最少50个字哦</string>
    <string name="min_20">内容最少20个字哦</string>
    <string name="at_least_1_pic">请至少添加一张照片</string>
    <string name="min_4">标题最少4个字哦</string>
    <string name="hint_title">请输入标题</string>
    <string name="verify_code">验证码</string>
    <string name="key_in_code">请输入验证码</string>
    <string name="get_code">获得验证码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">确认输入</string>
    <string name="key_in_new_password">请输入您的新密码</string>
    <string name="key_in_new_password_again">请再次输入您的新密码</string>
    <string name="mon">一</string>
    <string name="tus">二</string>
    <string name="wen">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>
    <string name="done">完成</string>
    <string name="share">分享到</string>
    <string name="wechat">微信好友</string>
    <string name="moment">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="map_autonavi">开启高德地图导航</string>
    <string name="map_baidu">开启百度地图导航</string>
    <string name="map_tencent">开启腾讯地图导航</string>
</resources>