<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_cross"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="37dp">

        <TextView
            android:id="@+id/textView82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            app:layout_constraintLeft_toRightOf="@+id/textView80"
            app:layout_constraintRight_toLeftOf="@+id/textView83"
            app:layout_constraintTop_toTopOf="@+id/textView83" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tus"
            app:layout_constraintLeft_toRightOf="@+id/textView82"
            app:layout_constraintRight_toLeftOf="@+id/textView84"
            app:layout_constraintTop_toTopOf="@+id/textView84" />

        <TextView
            android:id="@+id/textView84"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wen"
            app:layout_constraintLeft_toRightOf="@+id/textView83"
            app:layout_constraintRight_toLeftOf="@+id/textView85"
            app:layout_constraintTop_toTopOf="@+id/textView85" />

        <TextView
            android:id="@+id/textView85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            app:layout_constraintLeft_toRightOf="@+id/textView84"
            app:layout_constraintRight_toLeftOf="@+id/textView87"
            app:layout_constraintTop_toTopOf="@+id/textView87" />

        <TextView
            android:id="@+id/textView87"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            app:layout_constraintLeft_toRightOf="@+id/textView85"
            app:layout_constraintRight_toLeftOf="@+id/textView88"
            app:layout_constraintTop_toTopOf="@+id/textView88" />

        <TextView
            android:id="@+id/textView88"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/sat"
            app:layout_constraintLeft_toRightOf="@+id/textView87"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView82"
            app:layout_constraintTop_toTopOf="@+id/textView82" />
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>