<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_option1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/draft_dialog_option1"
        android:textColor="@color/text_black"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider2"/>

    <TextView
        android:id="@+id/tv_option2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/draft_dialog_option2"
        android:textColor="@color/text_black"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider2"/>

    <TextView
        android:id="@+id/tv_option3"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/draft_dialog_option3"
        android:textColor="@color/text_black"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/divider2"/>

    <TextView
        android:id="@+id/tv_option4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_black"
        android:textSize="14sp" />

</LinearLayout>