<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_autonavi"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/map_autonavi"
        android:textColor="@color/text_black"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider2"/>

    <TextView
        android:id="@+id/tv_baidu"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/map_baidu"
        android:textColor="@color/text_black"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider2"/>

    <TextView
        android:id="@+id/tv_tencent"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/map_tencent"
        android:textColor="@color/text_black"
        android:textSize="14sp" />
</LinearLayout>