<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider2">
    <include layout="@layout/toolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/divider2"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="49dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:hint="@string/key_in_new_password"
            android:textColor="@color/text_black"
            android:textCursorDrawable="@drawable/cursor_black"
            android:textSize="13sp"
            android:maxLength="20"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:textColorHint="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginRight="12dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="98dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="14sp"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider2"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="49dp">

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:hint="@string/key_in_new_password_again"
            android:textColor="@color/text_black"
            android:textCursorDrawable="@drawable/cursor_black"
            android:textSize="13sp"
            android:maxLength="20"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:textColorHint="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginRight="12dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="98dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_again"
            android:textSize="14sp"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider2"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="49dp">

        <TextView
            android:id="@+id/tv_verify"
            android:layout_width="85dp"
            android:layout_height="24dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/get_code"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/bg_button_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="0dp"
            android:maxLength="4"
            android:inputType="number"
            android:background="@color/white"
            android:hint="@string/key_in_code"
            android:textColor="@color/text_black"
            android:textCursorDrawable="@drawable/cursor_black"
            android:textSize="13sp"
            android:textColorHint="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_verify"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginLeft="98dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:textSize="14sp"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/text_grey"
        android:text="@string/yes"
        android:textColor="@color/bg_grey"
        android:textSize="16sp"
        android:gravity="center"/>
</LinearLayout>