<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_grey2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="19dp"
        android:text="@string/share"
        android:textColor="@color/text_black"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_friend"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="13dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView118"
        app:layout_constraintTop_toBottomOf="@+id/textView118"
        app:srcCompat="@mipmap/ic_share_wechat" />

    <ImageView
        android:id="@+id/iv_moment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_friend"
        app:layout_constraintTop_toTopOf="@+id/iv_friend"
        app:srcCompat="@mipmap/ic_share_moment" />

    <ImageView
        android:id="@+id/iv_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_moment"
        app:layout_constraintTop_toTopOf="@+id/iv_moment"
        app:srcCompat="@mipmap/ic_share_weibo" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/no"
        android:gravity="center"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView120"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textView120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="7dp"
        android:text="@string/wechat"
        android:textColor="@color/text_black"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintLeft_toLeftOf="@+id/iv_friend"
        app:layout_constraintRight_toRightOf="@+id/iv_friend"
        app:layout_constraintTop_toBottomOf="@+id/iv_friend" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="7dp"
        android:text="@string/moment"
        android:textColor="@color/text_black"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_moment"
        app:layout_constraintRight_toRightOf="@+id/iv_moment"
        app:layout_constraintTop_toBottomOf="@+id/iv_moment" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="7dp"
        android:text="@string/weibo"
        android:textColor="@color/text_black"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_weibo"
        app:layout_constraintRight_toRightOf="@+id/iv_weibo"
        app:layout_constraintTop_toBottomOf="@+id/iv_weibo" />
</android.support.constraint.ConstraintLayout>